reorganized a bit, made calendar a cljc file

--- a/resources/public/guide.html
+++ b/resources/public/guide.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/stylekit.css">
 </head>
 <body>
-<a href="visuals.html">Visual Regression Tests</a>
-<a href="guide.html">Guide</a>
+<script src="js/guide.js"></script>
 </body>
 </html>
