touched up naming to prevent conflicts

--- a/resources/public/guide.html
+++ b/resources/public/guide.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Untangled Component Demo Cards</title>
-    <link rel="stylesheet" href="css/stylekit.css">
+    <link rel="stylesheet" href="css/untangled-ui-stylekit.css">
 </head>
 <body>
 <script src="js/guide.js"></script>
