--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Untangled Component Demo Cards</title>
-    <link rel="stylesheet" href="css/stylekit.css">
 </head>
 <body>
-<a href="visuals.html">Visual Regression Tests</a>
-<a href="guide.html">Guide</a>
+  <ul>
+    <li><a href="visuals.html">Visual Regression Tests (-Dvisuals)</a></li>
+    <li><a href="guide.html">Active Components Guide (-Dguide)</a></li>
+    <li><a href="guide-css.html">CSS Guide (-Dcss-guide)</a></li>
+    <li><a href="test.html">Specification Tests (-Dtest)</a></li>
+  </ul>
 </body>
 </html>
