--- a/resources/public/guide-css.html
+++ b/resources/public/guide-css.html
@@ -2,12 +2,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> <!-- This enables smaller devices to view this site responsively -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600"> <!-- This is the default webfont -->
-    <link rel="stylesheet" href="css/guide.css">
+    <link rel="stylesheet" href="css/untangled-ui-guide.css">
 </head>
 <body>
 
 <div id="ui"></div>
 
-<script src="js/cards.js"></script>
+<script src="js/css-guide.js"></script>
 </body>
 </html>
