added visual regression tests

--- a/resources/public/visuals.html
+++ b/resources/public/visuals.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Untangled Component Demo Cards</title>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
     <link rel="stylesheet" href="css/untangled-ui-stylekit.css">
 </head>
 <body>
