--- a/resources/public/visuals.html
+++ b/resources/public/visuals.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Untangled Component Demo Cards</title>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
-    <link rel="stylesheet" href="css/untangled-ui-stylekit.css">
+    <link rel="stylesheet" href="css/untangled-ui.css">
 </head>
 <body>
 <script src="js/visuals.js"></script>
