--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="c-toolbar c-toolbar--framed c-toolbar--raised-">
     <div class="c-toolbar__row">
-      <div class="u-column--4 u-column--3@md u-column--2@lg u-middle">
+      <div class="u-column--6 u-middle">
         <div class="o-toolbar__tile">
           <img src="/img/logo.png" height="40" width="40" style="margin-top: 2px;">
           <span class="u-font-size--semi-medium" style="position: relative; top: -12px; margin-left: 10px;">Untangled UI</span></div>
