cleanup; Update toolbar layouts

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,13 +10,12 @@
   <div class="u-layout">
     <div class="u-layout__page"
 
-    <header class="u-layout__header c-toolbar c-toolbar--framed">
+    <header class="u-layout__header c-toolbar">
+      <div class="c-toolbar__button">
+        <img src="/img/logo.png" height="40" width="40" style="margin: 4px;">
+      </div>
       <div class="c-toolbar__row">
-        <div class="u-column--6 u-middle">
-          <div class="o-toolbar__tile">
-            <img src="/img/logo.png" height="40" width="40" style="margin-top: 2px;">
-            <span class="u-font-size--semi-medium" style="position: relative; top: -12px; margin-left: 10px;">Untangled UI</span></div>
-        </div>
+        <span class="u-font-size--semi-medium">Untangled UI</span>
       </div>
     </header>
 
@@ -25,7 +24,7 @@
         <div class="u-row">
           <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
             <a class="c-card c-card--primary c-card--bordered" href="visuals.html">
-            <span class="c-card__title">
+            <span class="c-card__title" style="background-color: teal;">
               <h1 class="c-card__title-text">Visual Regression Tests</h1>
             </span>
               <span class="c-card__supporting-text">
@@ -34,8 +33,8 @@
             </a>
           </div>
           <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
-            <a class="c-card c-card--primary c-card--bordered" href="guide.html">
-            <span class="c-card__title" style="background-color: teal;">
+            <a class="c-card c-card--accent c-card--bordered" href="guide.html">
+            <span class="c-card__title">
                 <h1 class="c-card__title-text">Active Components Guide</h1>
             </span>
               <span class="c-card__supporting-text">
@@ -44,7 +43,7 @@
             </a>
           </div>
           <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
-            <a class="c-card c-card--accent c-card--bordered" href="guide-css.html">
+            <a class="c-card c-card--primary c-card--bordered" href="guide-css.html">
             <span class="c-card__title">
                 <h1 class="c-card__title-text">CSS Guide</h1>
             </span>
