--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -22,28 +22,20 @@
     <div class="u-layout__content">
       <article class="o-article">
         <div class="u-row">
+
           <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
-            <a class="c-card c-card--primary c-card--bordered" href="visuals.html">
+            <a class="c-card c-card--primary c-card--bordered" href="guide.html">
             <span class="c-card__title" style="background-color: teal;">
-              <h1 class="c-card__title-text">Visual Regression Tests</h1>
-            </span>
-              <span class="c-card__supporting-text">
-              <label class="is-optional" disabled>Build: </label> <code>-Dvisuals</code>
-            </span>
-            </a>
-          </div>
-          <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
-            <a class="c-card c-card--accent c-card--bordered" href="guide.html">
-            <span class="c-card__title">
-                <h1 class="c-card__title-text">Active Components Guide</h1>
+                <h1 class="c-card__title-text">Components Guide</h1>
             </span>
               <span class="c-card__supporting-text">
                   <label class="is-optional" disabled>Build: </label> <code>-Dguide</code>
             </span>
             </a>
           </div>
+
           <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
-            <a class="c-card c-card--primary c-card--bordered" href="guide-css.html">
+            <a class="c-card c-card--accent c-card--bordered" href="guide-css.html">
             <span class="c-card__title">
                 <h1 class="c-card__title-text">CSS Guide</h1>
             </span>
@@ -52,6 +44,18 @@
             </span>
             </a>
           </div>
+
+          <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
+            <a class="c-card c-card--primary c-card--bordered" href="visuals.html">
+            <span class="c-card__title">
+              <h1 class="c-card__title-text">Visual Regression Tests</h1>
+            </span>
+              <span class="c-card__supporting-text">
+              <label class="is-optional" disabled>Build: </label> <code>-Dvisuals</code>
+            </span>
+            </a>
+          </div>
+
           <div class="u-column--12 u-column--6@md u-column--3@lg u-text-center">
             <a class="c-card c-card--primary c-card--bordered" href="test.html">
             <span class="c-card__title" style="background-color: rebeccapurple;">
@@ -62,6 +66,7 @@
             </span>
             </a>
           </div>
+
         </div>
       </article>
     </div>
