--- a/resources/public/guide-css.html
+++ b/resources/public/guide-css.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <head>
     <title>Untangled UI Styleguide</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
