--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="u-layout__header c-toolbar">
       <div class="c-toolbar__button">
-        <img src="/img/logo.png" height="40" width="40" style="margin: 4px;">
+        <img src="img/logo.png" height="40" width="40" style="margin: 4px;">
       </div>
       <div class="c-toolbar__row">
         <span class="u-font-size--semi-medium">Untangled UI</span>
