gh-pages; Updated js for all guides to minified version

--- a/guide.html
+++ b/guide.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/untangled-ui.css">
 </head>
 <body>
-<script src="js/guide.js"></script>
+<script src="js/guide.min.js"></script>
 </body>
 </html>
