--- a/visuals.html
+++ b/visuals.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/untangled-ui.css">
 </head>
 <body>
-<script src="js/visuals.js"></script>
+<script src="js/visuals.min.js"></script>
 </body>
 </html>
