gh-pages; Updated index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="css/untangled-ui-guide.css">
   <title>Untangled UI</title>
 </head>
-<div>
+<body>
   <div class="u-layout">
-    <div class="u-layout__page"
+		<div class="u-layout__page">
 
     <header class="u-layout__header c-toolbar">
       <div class="c-toolbar__button">
