gh-pages; Updated layout index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </header>
 
-    <div class="u-layout__content">
+    <div class="u-layout__content" style="width:100%;">
       <article class="o-article">
         <div class="u-row">
 
